// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P component P label snapshot 1`] = `
<p
  className="p label"
>
  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, natus!
</p>
`;

exports[`P component P medium snapshot 1`] = `
<p
  className="p medium"
>
  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, natus!
</p>
`;

exports[`P component P small snapshot 1`] = `
<p
  className="p small"
>
  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, natus!
</p>
`;
